# Soul-of-the-Damned

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  winmain_stub.cpp
src/combat/: consumables.cpp  consumables.h  weapon.cpp  weapon.h
src/core/: input.cpp  input.h
src/entity/: enemy.cpp  enemy.h  entity.cpp  entity.h  player.cpp  player.h
src/ui/: HUD.cpp  HUD.h  menu.cpp  menu.h  paused.cpp  paused.h  playing.cpp  playing.h
